--- a/css/style1.css
+++ b/css/style1.css
@@ -1,5 +1,5 @@
 body {
-  background-color: lightblue;
+  background-color: white;
 }
 
 #sigma-container {
@@ -15,4 +15,18 @@ body {
   margin: auto;
   border-style: solid;
   border-width: 1px;
+}
+
+.axis--grid .domain {
+  fill: #ddd;
+  stroke: none;
+}
+
+.axis--x .domain,
+.axis--grid .tick line {
+  stroke: #fff;
+}
+
+.axis--grid .tick--minor line {
+  stroke-opacity: .5;
 }
