--- a/css/style1.css
+++ b/css/style1.css
@@ -30,3 +30,10 @@ body {
 .axis--grid .tick--minor line {
   stroke-opacity: .5;
 }
+
+#range {
+  display: inline-block;
+  width: 500px;
+  height: 10px;
+  padding: 0;
+}
