--- a/css/style1.css
+++ b/css/style1.css
@@ -10,11 +10,18 @@ body {
   border-width: 1px;
 }
 #sigma-container2 {
-  max-width: 800px;
+  max-width: 100%;
   height: 600px;
   margin: auto;
   border-style: solid;
   border-width: 1px;
+}
+
+#range {
+  display: inline-block;
+  width: 100%;
+  height: 10px;
+  padding: 0;
 }
 
 .axis--grid .domain {
@@ -28,12 +35,5 @@ body {
 }
 
 .axis--grid .tick--minor line {
-  stroke-opacity: .5;
-}
-
-#range {
-  display: inline-block;
-  width: 500px;
-  height: 10px;
-  padding: 0;
+  stroke-opacity: 0.5;
 }
