--- a/css/style1.css
+++ b/css/style1.css
@@ -36,13 +36,13 @@ body {
   /*bottom: 10px;*/
   left: 5px;
   position: absolute;
-  height: 250px;
+  /*height: 250px;*/
   /*height: 300px;*/
   background-color: rgb(249, 247, 237);
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
 }
 #plot-container > div {
-  margin: 10px;
+  /*  margin: 10px;*/
   overflow-x: auto;
 }
 
@@ -65,4 +65,26 @@ body {
 
 .axis--grid .tick--minor line {
   stroke-opacity: 0.5;
+}
+
+.collapsible {
+  background-color: #aaa;
+  /*color: white;*/
+  /*cursor: pointer;
+  padding: 1px;
+  width: 100%;
+  border: none;
+  text-align: center;
+  outline: none;*/
+}
+
+.active,
+.collapsible:hover {
+  /*background-color: #555;*/
+}
+
+.content {
+  /*padding: 0 18px;*/
+  display: none;
+  overflow: hidden;
 }
