--- a/css/style.css
+++ b/css/style.css
@@ -9,13 +9,13 @@ body {
   right: 0;
   position: absolute;
 }
-#sigma-container2 {
+/*#sigma-container2 {
   max-width: 100%;
   height: 600px;
   margin: auto;
   border-style: solid;
   border-width: 1px;
-}
+}*/
 
 #commands-container {
   top: 10px;
@@ -70,18 +70,6 @@ body {
 
 .collapsible {
   background-color: #aaa;
-  /*color: white;*/
-  /*cursor: pointer;
-  padding: 1px;
-  width: 100%;
-  border: none;
-  text-align: center;
-  outline: none;*/
-}
-
-.active,
-.collapsible:hover {
-  /*background-color: #555;*/
 }
 
 .content {
