--- a/css/style.css
+++ b/css/style.css
@@ -9,13 +9,6 @@ body {
   right: 0;
   position: absolute;
 }
-/*#sigma-container2 {
-  max-width: 100%;
-  height: 600px;
-  margin: auto;
-  border-style: solid;
-  border-width: 1px;
-}*/
 
 #commands-container {
   top: 10px;
@@ -35,7 +28,7 @@ body {
 #plot-container {
   bottom: 5px;
   /*bottom: 10px;*/
-  left: 5px;
+  right: 5px;
   position: absolute;
   /*height: 250px;*/
   /*height: 300px;*/
