--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -279,7 +279,7 @@ input[type="button"] {
   display: inline-block;
   height: 38px;
   padding: 0 30px;
-  color: #555;
+  color: #aaa;
   text-align: center;
   font-size: 11px;
   font-weight: 600;
@@ -346,7 +346,7 @@ select {
   height: 38px;
   width: 100px;
   padding: 6px 10px; /* The 6px vertically centers text on FF, ignored by Webkit */
-  background-color: #fff;
+  background-color: #ccc;
   border: 1px solid #d1d1d1;
   border-radius: 4px;
   box-shadow: none;
