--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
   right: 10px;
   position: absolute;
   width: 230px;
-  background-color: rgb(249, 247, 237);
+  background-color: rgb(100, 100, 100);
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
   overflow: auto;
 }
@@ -32,7 +32,7 @@ body {
   position: absolute;
   /*height: 250px;*/
   /*height: 300px;*/
-  background-color: rgb(249, 247, 237);
+  background-color: rgb(100, 100, 100);
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
 }
 #plot-container > div {
@@ -62,7 +62,7 @@ body {
 }
 
 .collapsible {
-  background-color: #aaa;
+  background-color: #ddd;
 }
 
 .content {
