Overall changes to the code / Much in tehe lay-out and for the menu, but also in the way that the overall index.js is configured.

--- a/css/normalize.css
+++ b/css/normalize.css
@@ -334,7 +334,7 @@ input {
 input[type="checkbox"],
 input[type="radio"] {
   box-sizing: border-box; /* 1 */
-  padding: 0; /* 2 */
+  padding: 5px; /* 2 */
 }
 
 /**
