--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -56,7 +56,7 @@
   }
   .column,
   .columns {
-    margin-left: 4%;
+    margin-left: 5px;
   }
   .column:first-child,
   .columns:first-child {
@@ -183,10 +183,10 @@ html {
   font-size: 62.5%;
 }
 body {
-  font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
-  line-height: 1.6;
+  font-size: 1.3em; /* currently ems cause chrome bug misinterpreting rems on body element */
+  line-height: 1.3;
   font-weight: 400;
-  font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial,
+  font-family: "Roboto", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial,
     sans-serif;
   color: #aaa;
 }
