--- a/css/style.css
+++ b/css/style.css
@@ -8,47 +8,46 @@ body {
   left: 0;
   right: 0;
   position: absolute;
+  background-color: black;
 }
 
 #commands-container {
-  top: 10px;
-  /*bottom: 10px;*/
-  left: 10px;
-  position: absolute;
+  position: relative;
   width: 100%;
-  max-height: 50%;
+  /* max-height: 60%; */
   background-color: transparent;
-  /*  background-color: orange; /*rgb(100, 100, 100)*/
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
-  overflow: auto;
-  padding: 0 5px;
   pointer-events: auto;
+  scroll-behavior: auto;
+  margin: 1px;
 }
 #commands-container > div {
-  margin: 10px;
+  margin: 5px;
   overflow: auto;
+  text-align: center;
 }
 
 #content {
   pointer-events: true;
+  position: relative;
+  top: 10px;
+  right: 0px;
 }
 
 #plot-container {
-  bottom: 5px;
-  /*bottom: 10px;*/
-  right: 5px;
+  /* top: 50%; */
+  bottom: 1px;
+  right: 1px;
   position: absolute;
-  max-height: 50%;
+  resize: both;
+  overflow: auto;
   max-width: 100%;
-  /*height: 250px;*/
-  /*height: 300px;*/
-  /*background-color: orange;*/
+  width: 33%;
   background-color: transparent;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
 }
 #plot-container > div {
   /*  margin: 10px;*/
   overflow-x: auto;
+  overflow-y: auto;
 }
 
 #range {
