--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -184,7 +184,7 @@ html {
 }
 body {
   font-size: 1.3em; /* currently ems cause chrome bug misinterpreting rems on body element */
-  line-height: 1.3;
+  line-height: 1.4;
   font-weight: 400;
   font-family: "Roboto", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial,
     sans-serif;
@@ -282,8 +282,8 @@ input[type="button"] {
   color: #fff;
   text-align: center;
   font-size: 11px;
-  font-weight: 600;
-  line-height: 38px;
+  font-weight: 500;
+  line-height: 30px;
   letter-spacing: 0.1rem;
   text-transform: uppercase;
   text-decoration: none;
@@ -293,6 +293,7 @@ input[type="button"] {
   border: 1px solid #bbb;
   cursor: pointer;
   box-sizing: border-box;
+  font-family: "Roboto", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
   /* color: white; */
 }
 .button:hover,
@@ -467,13 +468,13 @@ td:last-child {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 button,
 .button {
-  margin-bottom: 1rem;
+  margin: 0.5rem;
 }
 input,
 textarea,
 select,
 fieldset {
-  margin-bottom: 1.5rem;
+  margin: 1rem;
 }
 pre,
 blockquote,
