Custom design for the Slider to have similar apparencies over all browsers

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -334,6 +334,12 @@ input[type="button"].button-primary:focus {
   background-color: #1eaedb;
   border-color: #1eaedb;
 }
+input[type="range"] {
+  -webkit-appearance: none;
+  background-color: rgba(220, 220, 220, 0.8);
+  border-radius: 4px;
+  height: 3px;
+}
 
 /* Forms
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
