--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,6 @@ body {
 #range {
   display: inline-block;
   width: 95%;
-  height: 10px;
 }
 
 .axis--grid .domain {
@@ -92,5 +91,6 @@ body {
 }
 
 #WeekSelect {
-  width: 130px;
+  max-width: 99%;
+  min-width: 120px;
 }
